# near-shop-contract

docs/: wallet.txt
src/: Cargo.toml  LICENSE_MIT  package.json
src/contract/: .env  Cargo.toml
src/contract/migrations/2022-08-22-143738_create_initial_tables/: down.sql  up.sql
src/contract/neardev/: dev-account  dev-account.env
src/contract/src/: lib.rs  schema.rs
src/contract/src/contract/: mod.rs  near_shop.rs
src/contract/src/dto/: coupon.rs  mod.rs  product.rs  return_value.rs  user_shop.rs
src/contract/src/model/: coupon.rs  mod.rs  product.rs  user_shop.rs
src/contract/src/non_blockchain_model/: favorite_product.rs  favorite_shop.rs  mod.rs  purchase.rs  wishlisted_product.rs
src/contract/src/utils/: mod.rs  random_utils.rs  vector_utils.rs
src/integration-tests/: Cargo.toml
src/integration-tests/src/: tests.rs
src/neardev/: dev-account  dev-account.env
src/src/: lib.rs
src/src/contract/: mod.rs
src/src/dto/: coupon.rs  product.rs  user_shop.rs
src/src/model/: coupon.rs  product.rs  storage_keys.rs  user_shop.rs
src/src/utils/: mod.rs  vector_utils.rs
