[package]
name = "shop"
version = "0.1.0"
authors = ["Dejan Janjusevic <dejan.janjusevic@quantox.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
near-sdk = "4.0.0"
nanoid = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.143"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
workspaces = "0.4.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

