[package]
name = "shop"
version = "0.1.0"
authors = ["Dejan Janjusevic <dejan.janjusevic@quantox.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
nanoid = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.143"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
