[package]
name = "shop"
version = "0.1.0"
authors = ["Dejan Janjusevic <dejan.janjusevic@quantox.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
serde = "1.0.143"
fastrand = "1.1.0"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
